hamburger and carousel z-index fix

--- a/bayaz_website/src/components/Carousel.css
+++ b/bayaz_website/src/components/Carousel.css
@@ -11,3 +11,6 @@
     height: 850px;
     object-fit: contain;
 }
+#carousel {
+    z-index: 0;
+}
